Bug 40316 - [4.5 Regression] Revision 147995 breaks gcc.target/i386/lea.c
Summary: [4.5 Regression] Revision 147995 breaks gcc.target/i386/lea.c
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: middle-end (show other bugs)
Version: 4.5.0
: P3 normal
Target Milestone: 4.5.0
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on: 40304
Blocks:
  Show dependency treegraph
 
Reported: 2009-05-31 13:54 UTC by H.J. Lu
Modified: 2011-01-04 14:18 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2009-05-31 13:54:09 UTC
+++ This bug was initially created as a clone of Bug #40304 +++

On Linux/ia32, revision 147995:

http://gcc.gnu.org/ml/gcc-cvs/2009-05/msg00974.html

caused

FAIL: gcc.target/i386/lea.c scan-assembler leal
Comment 1 Jakub Jelinek 2009-06-01 17:13:17 UTC
Subject: Bug 40316

Author: jakub
Date: Mon Jun  1 17:13:04 2009
New Revision: 148055

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=148055
Log:
	PR middle-end/40316
	* recog.c (peep2_reinit_state): New function.
	(peephole2_init_state): Use it at the end of a basic block and also
	when seeing a RTX_FRAME_RELATED_P insn.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/recog.c

Comment 2 Jakub Jelinek 2009-06-01 17:15:58 UTC
Fixed.