re PR middle-end/40316 (Revision 147995 breaks gcc.target/i386/lea.c)

PR middle-end/40316
	* recog.c (peep2_reinit_state): New function.
	(peephole2_init_state): Use it at the end of a basic block and also
	when seeing a RTX_FRAME_RELATED_P insn.

From-SVN: r148055